--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -36,10 +36,6 @@
   }
 }
 
-.Room-cardEditButton {
-  margin-top: 20px;
-}
-
 .Room-cardDangerAction {
   display: flex;
   align-items: center;
